greader_compact: Blue border around #current-entry, tweaks to greyed-out read entries

--- a/greader_compact.css
+++ b/greader_compact.css
@@ -12,7 +12,18 @@ div.entry-secondary { height: 16px !important }
 
 #overview .title { font-size: 140% !important }
 
-#entries.list .read .collapsed { background: none repeat scroll 0 0 #F5F5F5 !important; border-color: #F5F5F5 !important; }
-#entries.list .read .entry-title, #entries.list .read .entry-main .entry-source-title, #entries.list, .read .entry-date { color: #888888 !important; }
+#entries.list .entry { border-left: 2px solid #FFF !important; border-right: 2px solid #FFF !important; }
+#entries.list #current-entry { border-left: 2px solid #4D90F0 !important; border-right: 2px solid #4D90F0 !important; }
+#entries.list #current-entry.expanded { border-color: #FFF !important; }
+#entries.list #current-entry .collapsed { border-color: #4D90F0 !important; }
+#entries.list .read .collapsed { background: #F5F5F5 !important; border-color: #F5F5F5 !important; }
+
+#entries.list .read .entry-main .entry-title,
+#entries.list .read .entry-main .entry-source-title,
+#entries.list .read .entry-main .entry-date { color: #888 !important; }
+
+#entries.list #current-entry.expanded.read .entry-main .entry-title,
+#entries.list #current-entry.expanded.read .entry-main .entry-source-title,
+#entries.list #current-entry.expanded.read .entry-main .entry-date { color: #666 !important; }
 
 }
