--- a/greader_compact.css
+++ b/greader_compact.css
@@ -9,19 +9,18 @@
 
 #overview .title { font-size: 140% !important }
 
-#entries.list .entry { border-left: 2px solid #FFF !important; border-right: 2px solid #FFF !important; }
-#entries.list #current-entry { border-left: 2px solid #4D90F0 !important; border-right: 2px solid #4D90F0 !important; }
-#entries.list #current-entry.expanded { border-color: #FFF !important; border-top: 2px solid #4D90F0 !important; }
+#entries.list .entry .collapsed { border: 2px solid #FFFFFF !important; background: #FFFFFF !important; }
+#entries.list .read .collapsed { border: 2px solid #F5F5F5 !important; background: #F5F5F5 !important; }
+#entries.list #current-entry .collapsed { border: 2px solid #4D90F0 !important; }
+#entries.list #current-entry.expanded .collapsed { border-color: #FFFFFF !important; border-top: 2px solid #4D90F0 !important; }
 #entries.list #current-entry.expanded .entry-actions { border-bottom: 2px solid #4D90F0 !important; }
-#entries.list #current-entry .collapsed { border-color: #4D90F0 !important; background: #FFFFFF !important; }
-#entries.list .read .collapsed, #entries.list #current-entry.read .collapsed { background: #F5F5F5 !important; border-color: #F5F5F5 !important; }
+#entries.list #current-entry.expanded .collapsed,
+ #entries.list #current-entry.expanded .entry-container,
+ #entries.list #current-entry.expanded .entry-actions { border-right: 2px solid #FFF !important; border-left: 2px solid #FFF !important; }
+
 #current-entry .entry-container .entry-title a,
  #current-entry .entry-container a.entry-source-title,
  #current-entry .entry-container a.entry-post-author-name { color: #222 !important; }
-
-#entries.list #current-entry .collapsed,
- #entries.list #current-entry.expanded .entry-container,
- #entries.list #current-entry.expanded .entry-actions { border-left: 1px solid #FFF !important; }
 
 #entries.list .read .entry-main .entry-title,
  #entries.list .read .entry-main .entry-source-title,
